# sfml-ecs-intro

./: CMakeLists.txt  README.md
src/: boundingBox.cc  boundingBox.h  main.cc  position.cc  position.h  tile.cc  tile.h
src/component/: boundingBox.cc  boundingBox.h  shape.cc  shape.h  transform.cc  transform.h
src/entity/: tile.cc  tile.h
